<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ICE</string>
    <string name="requestDate">Дата заявки</string>
    <string name="contrAgents">Контрагенты</string>
    <string name="salesPoints">Разгрузки</string>
    <string name="ok">OK</string>
    <string name="commercial">Рекламное предложение</string>
    <string name="sendRequest">Отправить заявку</string>
    <string name="storehouses">Склады</string>
    <string name="addProduct">Добавить товар</string>
    <string name="products">Товары</string>
    <string name="numbersOnly">Только цифры</string>
    <string name="textHintProductFilter">Фильтр товаров</string>
    <string name="showRequest">Показать заявку</string>
    <string name="textHintComment">Комментарий</string>
    <string name="textHintSalespointsFilter">Фильтр разгрузок</string>

    <string name="form_title">Заявка</string>

    <string name="menu_settings">Настройки</string>
    <string name="menu_report">Отчёт по заявкам</string>
    <string name="menu_refresh">Обновление</string>

    <string name="notif_error_updating">Ошибка обновления данных</string>
    <string name="notif_update_data_title">Обновление данных</string>
    <string name="notif_error_orders_title">Обновление заявок</string>
    <string name="notif_error_orders_updating">Ошибка отправки/проверки заявок</string>
    <string name="notif_update_data_message">Обновляются %1$s</string>
    <string name="notif_data_products">остатки</string>
    <string name="notif_data_contragents">контрагенты</string>
    <string name="notif_data_debts">задолженности</string>
    <string name="notif_data_orders">заявки</string>


    <string name="notif_request_success_title">Заявка отправлена</string>
    <string name="notif_request_success_message">Заявка для %1$s отправлена</string>

    <string name="notif_response_title">Заявка %1$s обработана</string>
    <string name="notif_response_text">Заявка для %1$s : %2$s</string>

    <string name="reportDate">Дата отчёта</string>
    <string name="dialog_button_positive">Да</string>
    <string name="dialog_button_negative">Нет</string>
    <string name="update_data_files_button">Обновить данные по базе</string>
    <string name="update_data_files_disclaimer">Данная функция должна использоваться только для исправления ошибок обновления данных и обновления с нуля. При наличии связи с Интернетом данные обновляются автоматически.</string>
    <string name="textHintContrAgentFilter">Фильтр контрагентов</string>
    <string name="pref_default_storehouse_summ">Код склада по умолчанию</string>
    <string name="pref_manager_db">Пользователь</string>
    <string name="pref_default_storehouse_title">Код склада</string>
    <string name="pref_manager_db_summ">Имя менеджера в БД</string>
    <string name="pref_notif_enable_summ">Включить оповещения об обновлениях базы данных (оповещения о заявках приходят в любом случае)</string>
    <string name="pref_notif_enable_title">Оповещения об обновлениях</string>
    <string name="pref_cat_DB_options_summ">Настройки подключения к удалённой базе заявок</string>
    <string name="pref_cat_DB_options_title">База данных заявок</string>
    <string name="pref_screen_sys_options_title">Системные настройки</string>
    <string name="pref_screen_sys_options_summ">Меняются только при изменениях на сервере</string>
    <string name="pref_db_host_title">Хост (IP или имя)</string>
    <string name="pref_db_port_title">Порт</string>
    <string name="pref_db_name_title">Имя базы</string>
    <string name="pref_db_username_title">Имя пользователя в базе</string>
    <string name="pref_db_username_summ">Не связано с именем менеджера в приложении</string>
    <string name="pref_db_password_title">Пароль</string>
    <string name="pref_order_days_ahead_title">Ограничение даты заказа</string>
    <string name="pref_order_days_ahead_summ">На сколько дней вперёд можно выбрать дату заказа</string>
    <string name="pref_exchange_frequency_summ">Время в секундах</string>
    <string name="pref_exchange_frequency_title">Интервал обновления данных</string>
    <string name="pref_apk_update_url_summ">URL на обновлённого apk-файла</string>
    <string name="pref_apk_update_url_title">Путь обновления приложения</string>
    <string name="progress_dialog_title">Данные обновляются</string>
    <string name="progress_dialog_message">Дождитесь обновления данных</string>
    <string name="progress_apk_dialog_title">Обновление</string>
    <string name="progress_apk_dialog_message">Приложение загружается с сервера</string>
    <string name="update_in_progress">Идёт обновление данных. Пожалуйста, дождитесь его окончания.</string>
    <string name="data_update_success">Обновлено успешно</string>
    <string name="data_update_fail">Не удалось загрузить данные</string>
    <string name="update_data_files_dialog_disclaimer">Перед обновлением все справочные данные
        будут сперва удалены. Продолжить?</string>
    <string name="update_apk_dialog_disclaimer">Хотите проверить обновление программы?</string>
    <string name="remote_db_exception_message">Идёт обновление данных. Пожалуйста, дождитесь его окончания.</string>
    <string name="title_activity_error_message">View Error Message</string>
    <string name="error_disclaimer">Здесь отображаются ошибки приложения, для технических нужд.</string>
    <string name="update_app">Обновить приложение</string>
    <string name="update_app_comment">Проверить обновления самого приложения. Проверяйте обновление если было сообщение о вышедшем обновлении.</string>
    <string name="report_summary">Сумма %1$s</string>
    <string name="order_answer">ОТВЕТ : %1$s</string>
    <string name="order_no_answer">ОТВЕТА НЕТ</string>
    <string name="btn_check_order_answer">Проверить ответ</string>
    <string name="report_empty">Ничего не найдено</string>
    <string name="report_order_sent">Отправлена</string>
    <string name="report_order_not_sent">Не отправлена</string>

    <string-array name="report_options">
        <item>Все</item>
        <item>Не обработанные</item>
        <item>Обработанные</item>
    </string-array>
</resources>