<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin">

    <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:layout_gravity="start|center_vertical"
            android:visibility="gone"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_data_files_button"
            android:id="@+id/pubFilesUpdateButton"
            />

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_data_files_disclaimer"
            android:id="@+id/textView"
            android:textColor="@color/warnTextColor"
            android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/textSuccess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/successTextColor"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/data_update_success"/>

    <TextView
        android:id="@+id/textFail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/warnTextColor"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/data_update_fail"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginRight="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:background="@color/divider"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_app"
            android:id="@+id/apkUpdateButton"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_app_comment"
            android:id="@+id/textView1"
            android:layout_gravity="start|center_vertical"
            android:layout_marginBottom="20dp"/>

</LinearLayout>