<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orderId="@+orderId/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"

    tools:context=".MainActivity">

    <LinearLayout
        android:orderId="@+orderId/layoutMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:orderId="@+orderId/textViewUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="12dp"
            android:text="" />

        <TextView
            android:orderId="@+orderId/textDate"
            style="@style/AppBaseTheme.DatePickerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:text="@string/requestDate" />

        <CheckBox
            android:orderId="@+orderId/checkBoxCommercial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/commercial" />

        <Button
            android:orderId="@+orderId/buttonStorehouses"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:onClick="onclick"
            android:text="@string/storehouses" />

        <TextView
            android:orderId="@+orderId/textViewStorehouse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

        <EditText
            android:orderId="@+orderId/editTextContrAgentFilter"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/textHintContrAgentFilter"
            android:inputType="text"
            android:textSize="14sp" />

        <Button
            android:orderId="@+orderId/buttonContrAgentsDialog"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:onClick="onclick"
            android:text="@string/contrAgents" />

        <TextView
            android:orderId="@+orderId/textViewContrAgent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            android:orderId="@+orderId/textViewContrAgentRelationship"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

        <EditText
            android:orderId="@+orderId/editTextSalespointsFilter"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/textHintSalespointsFilter"
            android:inputType="text"
            android:textSize="14sp" />

        <Button
            android:orderId="@+orderId/buttonSalespoints"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:onClick="onclick"
            android:text="@string/salesPoints" />

        <TextView
            android:orderId="@+orderId/textViewSalePoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="" />

        <EditText
            android:orderId="@+orderId/commentEditText"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/textHintComment"
            android:textSize="14sp" />

        <LinearLayout
            android:orderId="@+orderId/layoutProducts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <EditText
                    android:orderId="@+orderId/editTextProductFilter"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/textHintProductFilter"
                    android:inputType="text"
                    android:textSize="14sp" />

                <CheckBox
                    android:orderId="@+orderId/checkBoxProductFilterType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:checked="true"
                    android:text="@string/numbersOnly" />
            </LinearLayout>

            <Button
                android:orderId="@+orderId/buttonAddProduct"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:onClick="onclick"
                android:text="@string/addProduct" />
        </LinearLayout>

        <TextView
            android:orderId="@+orderId/textViewFinal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="30dp"
            android:text="" />

        <Button
            android:orderId="@+orderId/buttonSendRequest"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="onclick"
            android:text="@string/sendRequest" />

    </LinearLayout>
</ScrollView>
